--- a/fonts/assets/css/styles.css
+++ b/fonts/assets/css/styles.css
@@ -135,7 +135,9 @@ a:hover {
 
 .shadow-lg.box:hover {
     background: rgb(244, 241, 241);
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    box-shadow:
+        0 14px 28px rgba(0, 0, 0, 0.25),
+        0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 a {
@@ -248,7 +250,9 @@ a {
     opacity: 0;
     max-height: 0;
     overflow: hidden;
-    transition: opacity 200ms linear, max-height 200ms linear;
+    transition:
+        opacity 200ms linear,
+        max-height 200ms linear;
     will-change: opacity, max-height;
 }
 
@@ -259,14 +263,18 @@ a {
 }
 
 div#features {
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    box-shadow:
+        0 1px 3px rgba(0, 0, 0, 0.12),
+        0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
     border-radius: 25px;
     background: var(--background);
 }
 
 div#features:hover {
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    box-shadow:
+        0 14px 28px rgba(0, 0, 0, 0.25),
+        0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .partner:hover {
